--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest",
     "migrate-db": "cross-env NODE_OPTIONS='--experimental-json-modules' node scripts/migrateDataToMongo.js"
   },
   "dependencies": {
@@ -20,24 +21,33 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "geist": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.1",
     "next": "15.3.3",
+    "next-swagger-doc": "^0.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
+    "swagger-jsdoc": "^6.2.8",
     "tailwind-merge": "^3.3.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@swc/jest": "^0.2.38",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-mock-extended": "^4.0.0-beta1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.2"
   }
