Refactor: Load Firebase Admin SDK key from environment variable
Removes the hardcoded Firebase service account key file and updates the initialization logic to load the key from the `FIREBASE_ADMIN_SDK_KEY` environment variable. This improves security by preventing sensitive credentials from being committed to the repository. The `.gitignore` file is also updated to reflect this change.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+drone-solutions-backend-firebase-adminsdk-fbsvc-bca6d6f48d.json
 
 # vercel
 .vercel
@@ -60,4 +61,4 @@ node_modules/
 # OS specific
 # Task files
 tasks.json
-tasks/ 
+tasks/
